# roagg

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/roagg/providers/: datacite.py
tests/name-lists/: lu.txt
